Removing quotes from sentences. Making icons grey rather than colourful.

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@
                   <i class="bi bi-house"></i>
                 </div>
                 <h3>Property visit</h3>
-                <p>Provident nihil minus qui consequatur non omnis maiores. Eos accusantium minus dolores iure perferendis.</p>
+                <p>Letting agencies and landlord are 90% more willing to reply you if you are local and can visit the property.  WeVisit it for you.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -183,7 +183,7 @@
                   <i class="bi bi-camera-fill"></i>
                 </div>
                 <h3>Videos and photos</h3>
-                <p>Ut autem aut autem non a. Sint sint sit facilis nam iusto sint. Libero corrupti neque eum hic non ut nesciunt dolorem.</p>
+                <p>We will take pictures and videos. We know that some properties could look nice online but, sometimes they are not telling you everything: the outside of the property or the surrounding could make your experience in London very different. </p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -200,7 +200,9 @@
                 <a class="stretched-link">
                   <h3>Report</h3>
                 </a>
-                <p>Ut excepturi voluptatem nisi sed. Quidem fuga consequatur. Minus ea aut. Vel qui id voluptas adipisci eos earum corrupti.</p>
+                <p>
+                  Let us wrap everything up, you will get the real picture at the moment of the visit and you will get all your questions answered.
+                </p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -217,7 +219,7 @@
                 <a class="stretched-link">
                   <h3>Questions to ask</h3>
                 </a>
-                <p>Non et temporibus minus omnis sed dolor esse consequatur. Cupiditate sed error ea fuga sit provident adipisci neque.</p>
+                <p>Let us ask the right questions, check if something is different from what shown online and some personal preferences: does a desk fit? is it quiet so I can study?</p>
                 <a class="stretched-link"></a>
               </div>
             </div>
@@ -235,7 +237,9 @@
                 <a class="stretched-link">
                   <h3>Advices</h3>
                 </a>
-                <p>Cumque et suscipit saepe. Est maiores autem enim facilis ut aut ipsam corporis aut. Sed animi at autem alias eius labore.</p>
+                <p>
+                  Let us know you a bit better, do you like a quiet area or an area full of life? How really far are you from your Uni or work? The Overground is not the same as the DLR, and not all Tube lines are the same!
+                </p>
                 <a class="stretched-link"></a>
               </div>
             </div>
@@ -253,7 +257,9 @@
                 <a class="stretched-link">
                   <h3>Premium accounts</h3>
                 </a>
-                <p>Hic molestias ea quibusdam eos. Fugiat enim doloremque aut neque non et debitis iure. Corrupti recusandae ducimus enim.</p>
+                <p>
+                  You cannot send an inquiry about a room you saw online because you need a Premium Account like <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">Early Bird at Spare Room</a>? We have a yearly account so we will ask them to visit the room or property on your behalf!
+                </p>
                 <a class="stretched-link"></a>
               </div>
             </div>
@@ -405,9 +411,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
                   London can be a tough place to find somewhere to call home, we can make things easier and take the stress out of you.
-                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -415,9 +419,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
-                  There are not many cities more expensive than London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get really expensive. WeVisit for you, so you can save money and land directly on your new home.
-                  <i class="bi bi-quote quote-icon-right"></i>
+                  There are not many cities as expensive than London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get really expensive. WeVisit for you, so you can save money and land directly on your new home.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -425,9 +427,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
                   Have you been shown a really nice room online, wonderful pictures and photos and asked for a deposit to secure it? Scams are on the rise, so be aware of who you trust!
-                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -435,9 +435,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
                   Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at Uni? Let us take the worry of renting a place to stay so you can focus on what is really important.
-                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -445,9 +443,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  <i class="bi bi-quote quote-icon-left"></i>
                   Most landlords and agencies do not bother to reply to you if you are not yet in London so, you will not be given the chance to rent a room or property. We are locals, WeVisit the properties ourselves, they will get back to you if you tell them someone will visit it on your behalf!
-                  <i class="bi bi-quote quote-icon-right"></i>
                 </p>
               </div>
             </div><!-- End testimonial item -->
