Removing quotes from sentences. Making icons grey rather than colourful.

--- a/index.html
+++ b/index.html
@@ -497,7 +497,7 @@
             <div class="pricing-item featured">
 
               <div class="pricing-header">
-                <h3>Regular Plan</h3>
+                <h3>Regular</h3>
                 <h4><sup>£</sup>25<span> / visit</span></h4>
               </div>
 
@@ -524,7 +524,7 @@
             <div class="pricing-item">
 
               <div class="pricing-header">
-                <h3>Deluxe Plan</h3>
+                <h3>Deluxe</h3>
                 <h4><sup>£</sup>30<span> / visit</span></h4>
               </div>
 
