Added about section, fixing the center of the menu

--- a/index.html
+++ b/index.html
@@ -58,10 +58,12 @@
         <ul>
           <li><a href="index.html"><span>Home</span></a></li>
           <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
-          <li><a class="nav-link scrollto" href="index.html#why-us">Why Us</a></li>
+          <li><a class="nav-link scrollto" href="index.html#why-us">Why WV</a></li>
           <li><a class="nav-link scrollto" href="index.html#pricing">Pricing</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
           <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
+          <a></a>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
@@ -168,7 +170,7 @@
                   <i class="bi bi-house"></i>
                 </div>
                 <h3>Property visit</h3>
-                <p>Letting agencies and landlord are 90% more willing to reply you if you are local and can visit the property.  WeVisit it for you.</p>
+                <p>Letting agencies and landlords are 90% more willing to reply to you if you are local and can visit the property. WeVisit it for you.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -183,7 +185,7 @@
                   <i class="bi bi-camera-fill"></i>
                 </div>
                 <h3>Videos and photos</h3>
-                <p>We will take pictures and videos. We know that some properties could look nice online but, sometimes they are not telling you everything: the outside of the property or the surrounding could make your experience in London very different. </p>
+                <p>We will take pictures and videos. We know that some properties could look nice online, but sometimes they are not telling you everything: the outside of the property or the surrounding could make your experience in London very different.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -197,12 +199,8 @@
                 <div class="icon">
                   <i class="bi bi-file-richtext"></i>
                 </div>
-                <a class="stretched-link">
-                  <h3>Report</h3>
-                </a>
-                <p>
-                  Let us wrap everything up, you will get the real picture at the moment of the visit and you will get all your questions answered.
-                </p>
+                <h3>Report</h3>
+                <p>Let us wrap everything up. You will get real pictures at the moment of the visit and you will get all your questions answered.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -216,11 +214,8 @@
                 <div class="icon">
                   <i class="bi bi-question-lg"></i>
                 </div>
-                <a class="stretched-link">
-                  <h3>Questions to ask</h3>
-                </a>
-                <p>Let us ask the right questions, check if something is different from what shown online and some personal preferences: does a desk fit? is it quiet so I can study?</p>
-                <a class="stretched-link"></a>
+                <h3>Questions to ask</h3>
+                <p>Let us ask the right questions, check if something is different from what is shown online and some personal preferences: does a desk fit? is it quiet enough to study?</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -234,13 +229,8 @@
                 <div class="icon">
                   <i class="bi bi-people"></i>
                 </div>
-                <a class="stretched-link">
-                  <h3>Advices</h3>
-                </a>
-                <p>
-                  Let us know you a bit better, do you like a quiet area or an area full of life? How really far are you from your Uni or work? The Overground is not the same as the DLR, and not all Tube lines are the same!
-                </p>
-                <a class="stretched-link"></a>
+                <h3>Advices</h3>
+                <p>Let us know you a bit better, do you like a quiet area or an area full of life? How far are you from your Uni or work? The Overground is not the same as the DLR, and not all Tube lines are the same!</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -254,13 +244,8 @@
                 <div class="icon">
                   <i class="bi bi-gem"></i>
                 </div>
-                <a class="stretched-link">
-                  <h3>Premium accounts</h3>
-                </a>
-                <p>
-                  You cannot send an inquiry about a room you saw online because you need a Premium Account like <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">Early Bird at Spare Room</a>? We have a yearly account so we will ask them to visit the room or property on your behalf!
-                </p>
-                <a class="stretched-link"></a>
+                <h3>Premium accounts</h3>
+                <p>Can not you send an inquiry about a room you saw online because you need a Premium Account like <a href="https://www.spareroom.co.uk/content/info-faq/how-the-site-works" target="_blank">Early Bird at Spare Room</a>? We have a yearly account, so we will ask them to visit the room or property on your behalf!</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -275,7 +260,7 @@
       <div class="container" data-aos="fade-up">
 
         <div class="section-header">
-          <h2>Why Us</h2>  
+          <h2>Why WeVisit</h2>  
         </div>
 
         <div class="row g-4 g-lg-5" data-aos="fade-up" data-aos-delay="200">
@@ -290,10 +275,9 @@
 
             <!-- Tabs -->
             <ul class="nav nav-pills mb-3">
-              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How</a></li>
-              <li><a class="nav-link" data-bs-toggle="pill" href="#tab4">About</a></li>
+              <li><a class="nav-link active" data-bs-toggle="pill" href="#tab1">Why Us</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab2">What we solve</a></li>
+              <li><a class="nav-link" data-bs-toggle="pill" href="#tab3">How we do</a></li>
             </ul><!-- End Tabs -->
 
             <!-- Tab Content -->
@@ -376,22 +360,6 @@
 
               </div><!-- End Tab 3 Content -->
 
-              <div class="tab-pane fade show" id="tab4">
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</a>
-                </div>
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>We know how difficult it is to find the right place.</a>
-                </div>
-                <div class="d-flex align-items-center mt-4">
-                  <i class="bi bi-dash"></i>
-                  <a>With us it does not have to be in that way</a>
-                </div>
-
-              </div><!-- End Tab 4 Content -->
-
             </div>
 
           </div>
@@ -411,7 +379,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  London can be a tough place to find somewhere to call home, we can make things easier and take the stress out of you.
+                  London can be a tough place to find somewhere to call home, but we can make things easier and take the stress out of you.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -419,7 +387,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  There are not many cities as expensive than London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get really expensive. WeVisit for you, so you can save money and land directly on your new home.
+                  There are not many cities as expensive as London for accommodation, staying in a hotel for weeks until you manage to find your room or property to move in could get very expensive. WeVisit for you, so you can save money and land directly on your new home.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -435,7 +403,7 @@
             <div class="swiper-slide">
               <div class="testimonial-item">
                 <p>
-                  Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at Uni? Let us take the worry of renting a place to stay so you can focus on what is really important.
+                  Are you worried about how you will fit in the city? Not sure about your new colleagues? Worried about your first year at University? Let us take the worry of renting a place to stay so you can focus on what is really important.
                 </p>
               </div>
             </div><!-- End testimonial item -->
@@ -556,6 +524,19 @@
 
       </div>
     </section><!-- End Pricing Section -->
+
+    <!-- ======= About Section ======= -->
+    <section id="about" class="about">
+      <div class="container" data-aos="fade-up">
+
+        <div class="section-header">
+          <h2>About Us</h2>
+          <p>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
+          <p>We know how difficult it is to find the right place. With us it does not have to be in that way</p>
+        </div>
+
+      </div>
+    </section><!-- End About Section -->
 
     <!-- ======= F.A.Q Section ======= -->
     <section id="faq" class="faq">
