Removing S from advices.

--- a/index.html
+++ b/index.html
@@ -229,7 +229,7 @@
                 <div class="icon">
                   <i class="bi bi-people"></i>
                 </div>
-                <h3>Advices</h3>
+                <h3>Advice</h3>
                 <p>Let us know you a bit better, do you like a quiet area or an area full of life? How far are you from your Uni or work? The Overground is not the same as the DLR, and not all Tube lines are the same!</p>
               </div>
             </div>
