--- a/index.html
+++ b/index.html
@@ -89,8 +89,8 @@
     <div class="container d-flex flex-column justify-content-center align-items-center text-center position-relative" data-aos="zoom-out">
       <img src="assets/img/icon.png" class="img-fluid">
       <p></p>
-      <h2><span>WeVisit</span></h2>
-      <p></p>
+      <h2>Welcome to <span>WeVisit</span></h2>
+      <p>Find Check Rent</p>
     </div>
   </section>
 
