--- a/index.html
+++ b/index.html
@@ -532,7 +532,7 @@
         <div class="section-header">
           <h2>About Us</h2>
           <p>We are locals that have been renting in London for over a decade in many different places, rooms shared accommodations, studios and entire properties from 1 to 4-bedroom houses.</p><br>
-          <p>We know how difficult it is to find the right place. With us it does not have to be in that way</p>
+          <p>We know how difficult it is to find the right place. With us it does not have to be in that way.</p>
         </div>
 
       </div>
