--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
 
         <div class="section-header">
           <h2>Our Services</h2>
-          <p>Ea vitae aspernatur deserunt voluptatem impedit deserunt magnam occaecati dssumenda quas ut ad dolores adipisci aliquam.</p>
+          <p>Everything you need to find the accommodation that suits you best.</p>
         </div>
 
         <div class="row gy-5">
