--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
             <div class="service-item position-relative">
               <div class="icon"><i class="bi bi-file-earmark-check icon"></i></div>
               <h4>Get our report</h4>
-              <p>We will take pictures and  videos of the surrounding area, the outside and the inside of the property. Then, we will report you back with our findings about the property.</p>
+              <p>We will take pictures and  videos of the surrounding area, the outside and the inside of the property. Then, we will report to you back with our findings about the property.</p>
             </div>
           </div><!-- End Service Item -->
 
