--- a/index.html
+++ b/index.html
@@ -42,6 +42,16 @@
   <script src="https://kit.fontawesome.com/add9537e54.js" crossorigin="anonymous"></script>
 </head>
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-R3HJ2FND2R"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-R3HJ2FND2R');
+</script>
+
 <body>
 
   <!-- ======= Header ======= -->
