--- a/terms-and-conditions.html
+++ b/terms-and-conditions.html
@@ -250,12 +250,11 @@ Arial;mso-fareast-font-family:Calibri;color:#595959;mso-themecolor:text1;
 mso-themetint:166;"><span style="font-size:11.0pt;line-height:115%;
 Arial;mso-fareast-font-family:Calibri;color:#595959;mso-themecolor:text1;
 mso-themetint:166;"><bdt class="statement-end-if-in-editor"></bdt></span></span></bdt><bdt
-                    class="block-component"></bdt></span></span></bdt></span></span> and have our registered office at <bdt
-                    class="question">London, UK</bdt><bdt class="block-component"></bdt></span></span>, <bdt
+                    class="block-component"></bdt></span></span></bdt></span></span> and have our registered office at <bdt class="block-component"></bdt></span></span><bdt
                     class="question">London</bdt></span></span><span style="font-size: 15px;"><span
                     data-custom-class="body_text"><span style="font-size: 15px;"><span
                     data-custom-class="body_text"><span style="color: rgb(89, 89, 89);"><bdt
-                    class="block-component"></bdt>, <bdt class="question">London</bdt><bdt
+                    class="block-component"></bdt>, <bdt class="question"></bdt><bdt
                     class="statement-end-if-in-editor"></bdt><bdt class="block-component"></bdt> <bdt class="question">E3</bdt><bdt
                     class="statement-end-if-in-editor"></bdt></span></span></span></span></span><span style="font-size:11.0pt;line-height:115%;
 Arial;mso-fareast-font-family:Calibri;color:#595959;mso-themecolor:text1;
@@ -1346,7 +1345,6 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;">In order to resol
             <div class="MsoNormal" data-custom-class="body_text" style="line-height: 1.5;"><span
                     style="color: rgb(89, 89, 89);"><strong><span style="font-size: 15px;"><bdt class="question"><span
                     style="color: rgb(89, 89, 89);"><strong><span style="font-size: 15px;"><bdt
-                    class="block-component"></bdt></span></strong></span>London, UK</bdt><bdt
                     class="statement-end-if-in-editor"></bdt></span></strong></span></div>
             <div class="MsoNormal" data-custom-class="body_text" style="line-height: 1.5;"><span
                     style="color: rgb(89, 89, 89);"><strong><span style="font-size: 15px;"><bdt class="question"><span
@@ -1354,7 +1352,7 @@ Calibri;color:#595959;mso-themecolor:text1;mso-themetint:166;">In order to resol
                     class="block-component"></bdt></span></strong></span></div>
             <div class="MsoNormal" data-custom-class="body_text" style="line-height: 1.5;"><span
                     style="color: rgb(89, 89, 89);"><strong><span style="font-size: 15px;"><bdt
-                    class="question">London</bdt><bdt class="block-component"></bdt>, <bdt class="question">London</bdt></span></strong><strong><span
+                    class="question">London</bdt><bdt class="block-component"></bdt>, <bdt class="question"></bdt></span></strong><strong><span
                     style="font-size: 15px;"><bdt class="statement-end-if-in-editor"></bdt></span></strong><strong><span
                     style="font-size: 15px;"><bdt class="block-component"></bdt></span></strong></span> <span
                     style="color: rgb(89, 89, 89);"><strong><span style="font-size: 15px;"><bdt
