Adding something between logo and the next section.

--- a/index.html
+++ b/index.html
@@ -106,6 +106,17 @@
 
   <main id="main">
 
+    <!-- ======= Clients Section ======= -->
+    <section id="clients" class="clients">
+      <div class="container" data-aos="zoom-out">
+        <div class="container" data-aos="fade-up">
+          <div class="section-header">
+            <h2>Finding a place to rent does <strong>not</strong> have to be <i><span id="word">risky</span></i></h2>
+          </div>
+        </div>
+      </div>
+    </section><!-- End Clients Section -->
+
     <!-- ======= Featured Services Section ======= -->
     <section id="featured-services" class="featured-services">
       <div class="container">
@@ -807,6 +818,7 @@
   <!-- Template Main JS File -->
   <script src="assets/js/main.js"></script>
   <script src="assets/js/terms-and-conditions-includer.js"></script>
+  <script src="assets/js/introduction.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
