--- a/index.html
+++ b/index.html
@@ -206,7 +206,7 @@
                   <i class="bi bi-camera-fill"></i>
                 </div>
                 <h3>Videos and photos</h3>
-                <p>We will take pictures and videos. We know that some properties could look nice online, but sometimes they are not telling you everything: the outside of the property or the surrounding could make your experience in London very different.</p>
+                <p>We will take pictures and videos. Some properties could look nice online but they are not telling you everything: the outside or the surroundings could make your experience in London very different.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -221,7 +221,7 @@
                   <i class="bi bi-file-richtext"></i>
                 </div>
                 <h3>Report</h3>
-                <p>Let us wrap everything up. You will get real pictures at the moment of the visit and you will get all your questions answered.</p>
+                <p>Let us wrap everything up. You will get real pictures and videos at the moment of the visit, and you will get all your questions answered.</p>
               </div>
             </div>
           </div><!-- End Service Item -->
@@ -236,7 +236,7 @@
                   <i class="bi bi-question-lg"></i>
                 </div>
                 <h3>Questions to ask</h3>
-                <p>Let us ask the right questions, check if something is different from what is shown online and some personal preferences: does a desk fit? is it quiet enough to study?</p>
+                <p>Let us ask the right questions, check if something is different from what it is shown online and some personal preferences: does a desk for WFH fit? is it quiet enough to study? is safe going back home at night?</p>
               </div>
             </div>
           </div><!-- End Service Item -->
