--- a/index.html
+++ b/index.html
@@ -733,7 +733,7 @@
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
-                <textarea class="form-control" id="message" name="message" placeholder="Message" required></textarea>
+                <textarea class="form-control" id="message" name="message" placeholder="Tell us how we can help, send us a link to the room or property you want to to visit or just get in touch!" required></textarea>
               </div>
               <div class="my-3">
                 <div class="loading">Loading</div>
