--- a/index.html
+++ b/index.html
@@ -288,7 +288,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
+              <img src="assets/img/why-us-3.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
@@ -371,12 +371,17 @@
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>We will take pictures and  videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report with them and with our findings.</a>
+                  <a>We will take pictures and videos of the surrounding area and the outside and the inside of the property. Then, you will receive a report with them and with our findings.</a>
                 </div>
 
                 <div class="d-flex align-items-center mt-4">
                   <i class="bi bi-dash"></i>
-                  <a>We could also include details such as how tidy, clean, noisy, and insulated it is.</a>
+                  <a>We also include priceless details such as how tidy, clean, noisy, and how well insulated it is (or not!).</a>
+                </div>
+
+                <div class="d-flex align-items-center mt-4">
+                  <i class="bi bi-dash"></i>
+                  <a>If something looks dodgy or we don't think that the landlord is legit we will let you know.</a>
                 </div>
 
               </div><!-- End Tab 3 Content -->
