Added action to pricing buttons to fill contact details

--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="index.html#contact" class="buy-btn">It is my first time!</a>
+                <a href="index.html#contact" class="buy-btn" onclick="fillPromotion()">It is my first time!</a>
               </div>
 
             </div>
@@ -508,7 +508,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="index.html#contact" class="buy-btn">I am not too picky!</a>
+                <a href="index.html#contact" class="buy-btn" onclick="fillRegular()">I am not too picky!</a>
               </div>
 
             </div>
@@ -534,7 +534,7 @@
               </ul>
 
               <div class="text-center mt-auto">
-                <a href="index.html#contact" class="buy-btn">I want the best experience!</a>
+                <a href="index.html#contact" class="buy-btn" onclick="fillDeluxe()">I want the best experience!</a>
               </div>
 
             </div>
@@ -824,6 +824,7 @@
   <script src="assets/js/main.js"></script>
   <script src="assets/js/terms-and-conditions-includer.js"></script>
   <script src="assets/js/introduction.js"></script>
+  <script src="assets/js/plans-buttons.js"></script>
 
   <!-- Modal -->
   <div class="modal fade modal-xl" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
@@ -844,9 +845,11 @@
   </div>
   <!-- End of Modal -->
 
+  <!-- Script to insert the terms and conditions -->
   <script>
     includeHTML();
   </script>
+  <!-- End -->
 
 </body>
 
