--- a/index.html
+++ b/index.html
@@ -74,6 +74,7 @@
           <li><a class="nav-link scrollto" href="index.html#faq">FAQ</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact</a></li>
           <a></a>
+          <a></a>
         </ul>
         <i class="bi bi-list mobile-nav-toggle d-none"></i>
       </nav><!-- .navbar -->
@@ -799,8 +800,8 @@
         </div>
 
         <div class="social-links order-first order-lg-last mb-3 mb-lg-0">
-          <a href="https://www.facebook.com/wevisituk" class="facebook"><i class="bi bi-facebook"></i></a>
-          <a href="https://www.instagram.com/wevisituk/" class="instagram"><i class="bi bi-instagram"></i></a>
+          <a href="https://www.facebook.com/wevisituk" class="facebook"  target="_blank"><i class="bi bi-facebook"></i></a>
+          <a href="https://www.instagram.com/wevisituk/" class="instagram"  target="_blank"><i class="bi bi-instagram"></i></a>
         </div>
 
       </div>
