--- a/index.html
+++ b/index.html
@@ -289,7 +289,7 @@
 
           <div class="col-lg-5">
             <div class="about-img">
-              <img src="assets/img/why-us-3.jpg" class="img-fluid" alt="">
+              <img src="assets/img/why-us.jpg" class="img-fluid" alt="">
             </div>
           </div>
 
